--- a/index.html
+++ b/index.html
@@ -1,1 +1,293 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Nyraelle</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Kapakana:wght@300..400&display=swap" rel="stylesheet">
+  <script src="script.js"></script>
+</head>
+  <body>
+    <!--<button id="accendiFuoco" style="position: absolute; top: 10px; left: 10px; z-index: 9999;">
+      🔥 MARCHIA IL TESTO
+    </button>-->
+    <div style="position: absolute; top: 0px;"><h1 class="fire-text" style="text-align: center; font-size: 100px;">NYRAELLE</h1></div>
 
+    <div style="position: relative; width:750px; margin: 0 auto; top: 220px;">
+      <!-- Immagine di base (la gif) -->
+      <img src="https://i.imgur.com/LtPFEjs.gif" alt="GIF base" style="display: block; width: 100%;">
+
+      <!-- Immagine sovrapposta -->
+      <img src="https://i.imgur.com/hHbNBIz.png" alt="Overlay" style=" position: absolute;top: 0; left: 0; width: 100%; height: auto; pointer-events: none;">
+    </div>
+    <div style="position: absolute; top: 962px;"><h1 class="fire-text" style="text-align: center; font-size: 35px; letter-spacing: 0px;">FALCE DELLE FRECCE NERE</h1></div>
+    
+    <div style="width: 90%; margin-left: 5%; margin-right: 5%; position: absolute; top: 1025px;">
+      <hr style="border: none; height: 2px; background: linear-gradient(90deg, rgba(169, 169, 169, 0) 0%, rgba(169, 169, 169, 1) 50%, rgba(169, 169, 169, 0) 100%); position: relative; margin-top: 30px; margin-bottom: 30px;">
+    <section>
+      <div style="display: flex; align-items: center; margin-bottom: 20px;">
+        <!-- Testo a sinistra -->
+        <p style="flex: 1; margin-right: 20px; text-align: right;">
+          NYRAELLE NASCE L'OTTAVO GIORNO DI LUNASDAR, DA MADRE UMANA E PADRE ELFO DELLA NOTTE. NON HA ALCUNA MEMORIA DEI SUOI GENITORI BIOLOGICI, POICHÉ IL SUO PRIMO RICORDO RISALE A QUANDO È STATA VENDUTA AL MERCATO NERO DI DALEN AD UNA POTENTE FAMIGLIA DEL POSTO, I BLADEGREY. ADOTTATA DA JAHES BLADEGREY, NON FU MAI UNA FIGLIA, MA UN OGGETTO. FIN DA BAMBINA VENNE PIEGATA CON LA VIOLENZA, ADDESTRATA CON LA CRUDELTÀ, TRATTATA COME UNA SCHIAVA, ABUSATA E MARCHIATA COME UNA PROPRIETÀ. 
+        </p>
+
+        <!-- Contenitore delle immagini sovrapposte -->
+        <div style="position: relative; width: 350px; height: auto;">
+          <!-- GIF sotto -->
+          <img src="https://i.imgur.com/NeviLQG.gif" alt="GIF" 
+               style="width: 100%; height: auto; display: block;" 
+               onclick="Shalzen('https://i.imgur.com/2Czn1zb.gif', 'GIF finale', '800px')" 
+               class="1">
+
+          <!-- PNG sopra -->
+          <img src="https://i.imgur.com/hHbNBIz.png" alt="Overlay" 
+               style="position: absolute; top: 0; left: 0; width: 100%; height: auto;" 
+               onclick="Shalzen('https://i.imgur.com/2Czn1zb.gif', 'GIF finale', '800px')" 
+               class="1">
+        </div>
+      </div>
+      <div style="display: flex; align-items: center; margin-bottom: 20px;">
+        <!-- Contenitore immagini sovrapposte -->
+        <div style="position: relative; width: 350px; height: auto;">
+          <!-- GIF di base -->
+          <img src="https://i.imgur.com/G2UYOp7.gif" alt="GIF base" 
+               style="width: 100%; height: auto; display: block;" 
+               class="2">
+
+          <!-- Overlay sovrapposto -->
+          <img src="https://i.imgur.com/hHbNBIz.png" alt="Sovrapposta" 
+               style="position: absolute; top: 0; left: 0; width: 100%; height: auto;" 
+               class="2">
+        </div>
+
+        <!-- Testo a destra -->
+        <p style="flex: 1; margin-left: 20px; text-align: left;">
+          L'UNICO BARLUME DI UMANITÀ IN QUELL'INFERNO AVEVA UN NOME: EREVAN, UN ALTRO MEZZELFO CRESCIUTO CON LEI IN QUELLA STESSA PRIGIONE. IL LORO LEGAME ANDAVA OLTRE LA FRATELLANZA. SI PROTEGGEVANO, SI CURAVANO LE FERITE A VICENDA, SOPRAVVIVEVANO INSIEME. FINCHÉ UN GIORNO, EREVAN SPARÌ. NESSUN ADDIO, NESSUNA TRACCIA. SEMPLICEMENTE, NON C'ERA PIÙ. NYRAELLE SAPEVA, NEL PROFONDO, CHE NON L'AVREBBE MAI ABBANDONATA DI SUA VOLONTÀ, E QUANDO LA RABBIA PRESE IL POSTO DEL DOLORE, TROVÒ FINALMENTE IL CORAGGIO DI AGIRE.
+        </p>
+      </div>
+      <div style="display: flex; align-items: center; margin-bottom: 20px;">
+        <!-- Testo a sinistra -->
+        <p style="flex: 1; margin-right: 20px; text-align: right;">
+          QUANDO DONRIC, UNO DEI FIGLI DI JAHES BLADEGREY, IL CAPOSTIPITE DELLA FAMIGLIA, TENTÒ DI ABUSARE DI LEI PER L'ENNESIMA VOLTA, NYRAELLE LO UCCISE CON UN PUGNALE NEL VENTRE, SPEZZANDO ANCHE LE CATENE INVISIBILI CHE LA TENEVANO LEGATA A LORO. RUBÒ L'ANELLO D'ORO CON LO STEMMA DEI BLADEGREY DAL DITO DEL CADAVERE E FUGGÌ DALLA TENUTA, VERSO DIRHAE. DA ALLORA, VIVE CON UNO SCOPO: DIVENTARE PIÙ FORTE. TORNARE A DALEN. DISTRUGGERE I BLADEGREY, NOME DOPO NOME, VITA DOPO VITA.
+          <br><br>
+          <span style="font-family: 'Kapakana', bold; font-size: 40px; margin-bottom: 10px;">
+            "Jahes. Gardrol. Tyard."
+          </span>
+          <br><br>
+          UN MANTRA CHE GUIDA LE SUE NOTTI. I NOMI DI CHI DEVE MORIRE.
+        </p>
+
+        <!-- Contenitore per le immagini sovrapposte -->
+        <div style="position: relative; width: 350px; height: auto;">
+          <!-- Immagine di base -->
+          <img src="https://i.imgur.com/SAeSb38.gif" alt="GIF base" 
+               style="width: 100%; height: auto; display: block;" 
+               onclick="Shalzen('https://i.imgur.com/2Czn1zb.gif', 'GIF finale', '800px')" 
+               class="1">
+
+          <!-- Overlay -->
+          <img src="https://i.imgur.com/hHbNBIz.png" alt="Overlay" 
+               style="position: absolute; top: 0; left: 0; width: 100%; height: auto;" 
+               onclick="Shalzen('https://i.imgur.com/2Czn1zb.gif', 'GIF finale', '800px')" 
+               class="1">
+        </div>
+      </div>
+
+      <div style="display: flex; align-items: center; margin-bottom: 20px;">
+        <!-- Contenitore immagini sovrapposte -->
+        <div style="position: relative; width: 350px; height: auto;">
+          <!-- Immagine base (gif) -->
+          <img src="https://i.imgur.com/so5Zc8H.gif" alt="GIF base" 
+               style="width: 100%; height: auto; display: block;" class="2">
+
+          <!-- Sovrapposizione -->
+          <img src="https://i.imgur.com/hHbNBIz.png" alt="Overlay" 
+               style="position: absolute; top: 0; left: 0; width: 100%; height: auto;" class="2">
+        </div>
+
+        <!-- Testo a destra -->
+        <p style="flex: 1; margin-left: 20px; text-align: left;">
+          IL CORPO DI NYRAELLE È SFREGIATO DA CICATRICI E USTIONI CHE FORMANO UN DISEGNO COMPLESSO DI SIMBOLI SCONOSCIUTI.  
+          SULLA SCHIENA UN GRANDE SIMBOLO, CIRCONDATO DA DUE CERCHI CON ALTRI SEGNI CHE GLI GIRANO INTORNO.  
+          DUE FALCI DI LUNA INCISE SUL PETTO, AI DUE LATI VERSO LE SPALLE.  
+          UN INSIEME DI ALTRI SEGNI INCOMPRENSIBILI CHE SI SUSSEGUONO SULLE BRACCIA E SULLE GAMBE, FORMANDO UNA SORTA DI DISEGNO SUI SUOI ARTI.  
+          SONO SIMBOLI DI RITUALI OSCURI INCISI DA JAHES, CHE L'HANNO TENUTA MAGICAMENTE SOTTO CONTROLLO FIN QUANDO HA UCCISO IL PRIMOGENITO DEI BLADEGREY.  
+          ORA SEMBRA CHE QUELLA MAGIA NON SIA PIÙ ATTIVA. NYRAELLE NON SA NULLA DI COSA RAPPRESENTINO E DI QUALE FOSSE IL REALE SIGNIFICATO.
+        </p>
+      </div>
+ <hr style="border: none; height: 2px; background: linear-gradient(90deg, rgba(169, 169, 169, 0) 0%, rgba(169, 169, 169, 1) 50%, rgba(169, 169, 169, 0) 100%); position: relative; margin-top: 30px; margin-bottom: 30px;">
+      <div style="margin-bottom: 20px;">
+        <div style="position: relative; width: 500px; margin: 0 auto;">
+          <!-- Immagine di base (la gif) -->
+          <img src="https://i.imgur.com/8jMeAjg.gif" alt="GIF base" style="display: block; width: 100%;">
+
+          <!-- Immagine sovrapposta -->
+          <img src="https://i.imgur.com/hHbNBIz.png" alt="Overlay" style=" position: absolute;top: 0; left: 0; width: 100%; height: auto; pointer-events: none;">
+        </div>
+
+        <p style=" margin-right: 20px; margin-left: 20px; text-align: center;">
+          <span style="font-family: 'Kapakana', bold; font-size: 40px; margin-bottom: 10px;">
+          "Non è più fuga, non è più sopravvivenza. È una scelta"
+          </span>  
+          <br>
+          <br>
+          DIRHAE E RAISHA LARKHILL L'HANNO ACCOLTA,
+          SENZA FARE DOMANDE, SENZA OFFRIRE GARANZIE, DANDOLE QUALCOSA CHE NON PENSAVA ESISTESSE DAWERO: UNA SECONDA POSSIBILITÀ.
+          ENTRATA NELLE FRECCE NERE, NYRAELLE HA RICEVUTO PIÙ DI UN TETTO SULLA TESTA E UN'ARMA IN MANO.
+          HA RICEVUTO UNO SCOPO, UN'IDENTITÀ NUOVA, UNA STRADA CHE NON INIZIA E FINISCE CON LA VENDETTA.
+          NELLA GILDA, HA IMPARATO PAROLE CHE PRIMA SUONAVANO VUOTE: AMICIZIA, LEALTÀ, ONORE
+          NEL PERCORSO DA FALCE STA IMPARANDO A COMBATTERE, NON SOLO PER SE STESSA, MA PER LA SUA NUOVA FAMIGLIA.
+          DAVANTI A KHORR, NYRAELLE HA GIURATO DI NON LASCIARSI MAI PIÙ PIEGARE DALLA PAURA, NÉ SCHIACCIARE DALL'OMBRA
+          DEL PROPRIO PASSATO.
+          OGNI CICATRICE È DIVENTATA UN VOTO,
+          OGNI DOLORE UNA PROMESSA.
+          PER SÉ. PER EREVAN. PER CHI CAMMINA AL SUO FIANCO.
+          E UN GIORNO, QUANDO SARÀ IL MOMENTO GIUSTO, TORNERÀ A
+          DALEN, NON COME VITTIMA, NON COME PREDA. CI TORNERÀ COME GUERRIERA.
+          CON KHORR NEL CUORE, E LE FRECCE NERE ALLE SUE SPALLE.
+        </p>
+      </div>
+      <hr style="border: none; height: 2px; background: linear-gradient(90deg, rgba(169, 169, 169, 0) 0%, rgba(169, 169, 169, 1) 50%, rgba(169, 169, 169, 0) 100%); position: relative; margin-top: 30px; margin-bottom: 30px;">
+    </section>
+    </div>
+    <!--
+    <img src="https://s4.ezgif.com/tmp/ezgif-4a62adfd8742df.gif" style="height: 100%; position: absolute; bottom: 0; left: 0; right: 0; margin: 0 auto;">
+    <img src="https://s4.ezgif.com/tmp/ezgif-4a62adfd8742df.gif" alt="GIF base" style="display: block; height: 100%; position: absolute; bottom: 0; left: 0; right: 0; margin: 0 auto;">
+
+    <!-- Immagine sovrapposta 
+    <img src="https://i.imgur.com/hHbNBIz.png" alt="Overlay" style=" position: absolute;top: 0; left: 0; height:100%; height: auto; pointer-events: none;">-->
+    <section class="Dysperia" style="position: absolute; top: 3625px">
+    <div class="fire-text" style="text-align: center; font-size: 75px; letter-spacing: 0px;">IL RISVEGLIO DEL DRAGO</div>
+      
+    </section>
+    <img id="overlayImage" class="immagineOverlay" src="https://i.imgur.com/10WkvIw.gif" alt="Epica">
+  <div  style="position: absolute; top: 3750px; width: 90%; margin-left: 5%; margin-right: 5%;">
+    <section>
+
+      <div style="display: flex; align-items: center; margin-bottom: 20px;">
+        <!-- Testo a sinistra -->
+        <p style="flex: 1; margin-right: 20px; text-align: right;">
+          Un sogno.
+          Il nome di Ultima che riecheggia nella mente.
+          E, al risveglio, un’unica certezza incisa nell’anima: deve andare nel Brehorn, senza sapere cosa la spinga davvero, né perché.
+
+          All’alba è lì, esattamente dove i sogni l’hanno condotta.
+
+          Tra gli alberi si cela un accampamento: dieci uomini si riuniscono nell’ombra, tramando contro il duello che dovrebbe decretare il nuovo regnante del Nord.
+          Nyraelle si avvicina, ma non ha il tempo di parlare o di capire. Viene attaccata senza alcun avvertimento, come se la sua sola presenza fosse una minaccia.
+
+          Non può tirarsi indietro.
+          E in fondo, non vuole farlo.
+        </p>
+
+        <!-- Contenitore delle immagini sovrapposte -->
+        <div style="position: relative; width: 350px; height: auto;">
+          <!-- GIF sotto -->
+          <img src="https://i.imgur.com/2wJdTrV.gif" alt="GIF" 
+               style="width: auto; height: 400px; display: block;" 
+               onclick="Shalzen('https://i.imgur.com/2Czn1zb.gif', 'GIF finale', '800px')" 
+               class="1">
+
+          <!-- PNG sopra -->
+          <img src="https://i.imgur.com/hHbNBIz.png" alt="Overlay" 
+               style="position: absolute; top: 0; left: 0; height: 400px; width:300px;" 
+               onclick="Shalzen('https://i.imgur.com/2Czn1zb.gif', 'GIF finale', '800px')" 
+               class="1">
+        </div>
+      </div>
+      <div style="display: flex; align-items: center; margin-bottom: 20px;">
+        <!-- Contenitore immagini sovrapposte -->
+        <div style="position: relative; width: 350px; height: auto;">
+          <!-- GIF di base -->
+          <img src="https://i.imgur.com/vzJMPkh.gif" alt="GIF base" 
+               style="width: 100%; height: auto; display: block;" 
+               class="2">
+
+          <!-- Overlay sovrapposto -->
+          <img src="https://i.imgur.com/hHbNBIz.png" alt="Sovrapposta" 
+               style="position: absolute; top: 0; left: 0; width: 100%; height: auto;" 
+               class="2">
+        </div>
+
+        <!-- Testo a destra -->
+        <p style="flex: 1; margin-left: 20px; text-align: left;">
+          Trova dentro di sé il coraggio di combattere, di impugnare la spada e lanciarsi contro i nemici nel nome del suo dio, Khorr, pur sapendo che non ha alcuna reale possibilità di uscirne viva.
+
+          Eppure, qualcosa cambia.
+          I suoi movimenti non sembrano più essere i suoi, come se una forza sconosciuta la guidasse dall’interno.
+          Durante lo scontro, visioni improvvise e fulminee iniziano a invaderle la mente: l’uomo che affronta cambia d’aspetto, come avvolto da un’illusione del tempo, e improvvisamente indossa abiti antichi, appartenenti a un’altra epoca.
+          Tra gli alberi, un drago verde combatte contro centinaia di uomini, e quelle immagini si fondono alla realtà del presente, confondendo i confini tra ciò che è e ciò che è stato.
+        </p>
+      </div>
+      <div style="display: flex; align-items: center; margin-bottom: 20px;">
+        <!-- Testo a sinistra -->
+        <p style="flex: 1; margin-right: 20px; text-align: right;">
+          Poi, una voce.
+          Chiara, profonda, impossibile da ignorare.
+          Davanti a lei, un’elfa bellissima dagli occhi di colore diverso, con una cicatrice che le solca l’occhio destro, la guarda e parla:
+
+          «Io ti ho sognata nel mio ultimo respiro.
+          Tu sei la lama che torno a brandire.
+          Ti hanno forgiata con grazia.
+          Ma ora ti chiedo di spezzarti. Di nuovo. Per rinascere.
+          Sono Dysperia, e sono qui per restare.»
+
+          Nyraelle non oppone resistenza.
+        </p>
+
+        <!-- Contenitore delle immagini sovrapposte -->
+        <div style="position: relative; width: 350px; height: auto;">
+          <!-- GIF sotto -->
+          <img src="https://i.imgur.com/MfFZPo9.gif" alt="GIF" 
+               style="width: 100%; height: auto; display: block;" 
+               onclick="Shalzen('https://i.imgur.com/2Czn1zb.gif', 'GIF finale', '800px')" 
+               class="1">
+
+          <!-- PNG sopra -->
+          <img src="https://i.imgur.com/hHbNBIz.png" alt="Overlay" 
+               style="position: absolute; top: 0; left: 0; width: 100%; height: auto;" 
+               onclick="Shalzen('https://i.imgur.com/2Czn1zb.gif', 'GIF finale', '800px')" 
+               class="1">
+        </div>
+      </div>
+      <div style="display: flex; align-items: center; margin-bottom: 20px;">
+        <!-- Contenitore immagini sovrapposte -->
+        <div style="position: relative; width: 350px; height: auto;">
+          <!-- GIF di base -->
+          <img src="https://i.imgur.com/C4QYgLk.gif" alt="GIF base" 
+               style="width: 100%; height: auto; display: block;" 
+               class="2">
+
+          <!-- Overlay sovrapposto -->
+          <img src="https://i.imgur.com/hHbNBIz.png" alt="Sovrapposta" 
+               style="position: absolute; top: 0; left: 0; width: 100%; height: auto;" 
+               class="2">
+        </div>
+
+        <!-- Testo a destra -->
+        <p style="flex: 1; margin-left: 20px; text-align: left;">
+          Si abbandona completamente a quella voce, lasciandosi attraversare da quella volontà antica.
+          Il suo corpo si piega, si spezza e muta, trasformandosi in una creatura maestosa: un drago dal manto di scaglie nero ossidiana, le ali grandi e scure dai riflessi perlacei.
+          Con un unico, devastante soffio di fuoco, annienta tutti gli uomini presenti, reclamando ciò che le era stato negato per troppo tempo: la propria vita, il proprio respiro, la propria verità.
+
+          Poi, il silenzio.
+          La metamorfosi si dissolve.
+          Nyraelle torna sé stessa… almeno in parte.
+
+          Perché da quel momento non sarà più la stessa.
+          Dysperia si è risvegliata dentro di lei.
+        </p>
+      </div>
+  </div>
+    <audio id="glitchSound" src="https://files.catbox.moe/ipf61d.mp3"  type="audio/mpeg" preload="auto"></audio>
+  </body>
+  <script>
+    window.addEventListener('load', function() {
+      setTimeout(() => {
+        window.scrollTo(0, 0);
+      }, 10); // o prova con 100ms se 50 è troppo rapido
+    });
+  </script>
+</html>
