--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class="fire-text" style="text-align: center; font-size: 75px; letter-spacing: 0px;">IL RISVEGLIO DEL DRAGO</div>
       
     </section>
-    <img id="overlayImage" class="immagineOverlay" src="https://i.imgur.com/10WkvIw.gif" alt="Epica">
+    <img id="overlayImage" class="immagineOverlay" src="https://i.imgur.com/2FmMrm1.gif" alt="Epica">
   <div  style="position: absolute; top: 3750px; width: 90%; margin-left: 5%; margin-right: 5%;">
     <section>
 
