--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <br>
           <br>
           DIRHAE E RAISHA LARKHILL L'HANNO ACCOLTA,
-          SENZA FARE DOMANDE, SENZA OFFRIRE GARANZIE, DANDOLE QUALCOSA CHE NON PENSAVA ESISTESSE DAWERO: UNA SECONDA POSSIBILITÀ.
+          SENZA FARE DOMANDE, SENZA OFFRIRE GARANZIE, DANDOLE QUALCOSA CHE NON PENSAVA ESISTESSE DAVVERO: UNA SECONDA POSSIBILITÀ.
           ENTRATA NELLE FRECCE NERE, NYRAELLE HA RICEVUTO PIÙ DI UN TETTO SULLA TESTA E UN'ARMA IN MANO.
           HA RICEVUTO UNO SCOPO, UN'IDENTITÀ NUOVA, UNA STRADA CHE NON INIZIA E FINISCE CON LA VENDETTA.
           NELLA GILDA, HA IMPARATO PAROLE CHE PRIMA SUONAVANO VUOTE: AMICIZIA, LEALTÀ, ONORE
